chore: refactor and cleanup codebase
- Remove unnecessary test files (nul, test.mp3, test.wav, test-output.pdf)
- Remove duplicate basicPitchAnalyzer.ts file
- Add Sisyphus work plan documentation and notepads
- Update boulder.json to reflect completed plan
- Update components with improved UI/UX
- Update types and constants for better type safety
- Verify build succeeds after cleanup

Previous work:
- Fixed infinite loading issue by reverting to Basic Pitch
- Improved audio decoding timeout handling
- Enhanced error handling and progress tracking

All tests passing, build successful.

--- a/index.html
+++ b/index.html
@@ -16,23 +16,36 @@
     .font-serif {
       font-family: 'Playfair+Display', serif;
     }
-  </style>
-<script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "vexflow": "https://esm.sh/vexflow@^5.0.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+   </style>
 </head>
 <body>
   <div id="root"></div>
+<script>
+  // Polyfill for process.hrtime needed by @magenta/music
+  if (typeof globalThis.process === 'undefined') {
+    globalThis.process = {};
+  }
+  if (typeof globalThis.process.hrtime === 'undefined') {
+    globalThis.process.hrtime = function(previousTimestamp) {
+      const clocktime = performance.now() * 1e-3;
+      let seconds = Math.floor(clocktime);
+      let nanoseconds = Math.floor((clocktime % 1) * 1e9);
+      if (previousTimestamp) {
+        seconds = seconds - previousTimestamp[0];
+        nanoseconds = nanoseconds - previousTimestamp[1];
+        if (nanoseconds < 0) {
+          seconds--;
+          nanoseconds += 1e9;
+        }
+      }
+      return [seconds, nanoseconds];
+    };
+    globalThis.process.hrtime.bigint = function() {
+      const clocktime = performance.now() * 1e-3;
+      return BigInt(Math.floor(clocktime * 1e9));
+    };
+  }
+</script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
